[fix] (ABC-1487): Prevent components from creating useless scrollbars in parent (#1081)
* [fix] (ABC-1487): Prevent slider from creating useless scrollbar

* [fix] (ABC-1487): Prevent progress bar from creating useless scrollbar

* [fix] (ABC-1487): Fix auto position of avatar group hidden items popover

* [fix] (ABC-1487): Fix auto position of button icon popover

* [fix] (ABC-1487): Remove extra space around progress bar

* [fix] (ABC-1487): Make sure CSS class getter returns a string

--- a/src/modules/base/slider/slider.css
+++ b/src/modules/base/slider/slider.css
@@ -303,11 +303,13 @@
 }
 
 .avonni-slider__unit-container_ticks-horizontal {
-    margin-top: -57px;
+    top: 4px;
+    left: 0;
+    right: 0;
 }
 
 .avonni-slider__unit-container_ticks-horizontal-tick {
-    margin-top: -42px;
+    top: 20px;
 }
 
 .avonni-slider__slider::-webkit-slider-thumb {
